<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="fill"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical">
    <TextView
        android:text="@string/TextMessage"
        android:textSize="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/ButtonText2"
        android:id="@+id/Button1"
         />
    <CheckBox
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/CheckBoxMessage"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <ImageButton
            android:layout_width="40dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:src="@drawable/flag"
            />
        <Switch
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:text="@string/SwitchMessage"
            android:id="@+id/Switch1"/>

    </LinearLayout>
<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/hint"
    android:inputType="textPersonName"/>
    </LinearLayout>