<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >

    <TextView
        android:id="@+id/textViewRelative"
        android:layout_width="wrap_content"
        android:layout_height="51dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/TextMessage"
        android:textSize="30sp" />

    <Button
        android:id="@+id/Button1"
        android:layout_width="205dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewRelative"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="3dp"
        android:text="@string/ButtonText2" />

    <CheckBox
        android:id="@+id/Checkbox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CheckBoxMessage"
        android:layout_toEndOf="@+id/Button1"
        android:layout_alignBaseline="@+id/Button1"/>
    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/flag"
        android:layout_below="@+id/Button1"
        android:layout_alignParentStart="true"
        android:layout_marginTop="3dp"
        />
    <Switch
        android:id="@+id/Switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SwitchMessage"
        android:layout_toEndOf="@+id/imageButton1"
        android:layout_below="@+id/Checkbox1"
        />

    <EditText
        android:id="@+id/EditText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageButton1"
        android:hint="@string/hint"
        android:inputType="textPersonName" />
</RelativeLayout>